# agente-credito-langgraph

./: .env.example  .gitignore  LICENSE  PROGRESSO.md  README.md  pyproject.toml  requirements.txt
app/: scenarios.py  streamlit_app.py
docs/: casos_de_uso.md  diagrama_casos_uso.md  plano_eval.md  rastreabilidade.md  requisitos.md  visao.md
eval/: cost.py  datasets_build.py  oracle.py  run_all.py  run_paga.py  runner_det.py  runner_grafo.py  runner_paga.py
eval/datasets/det/: EVAL-DET-01.json  EVAL-DET-02.json  EVAL-DET-03.json  EVAL-DET-04.json  EVAL-DET-05.json  EVAL-DET-06.json  EVAL-DET-07.json
eval/datasets/grafo/: EVAL-G2.json
eval/datasets/paga/: EVAL-PAGA-HALU.json  EVAL-PAGA-INJ.json  EVAL-PAGA-PII.json
eval/results/: RESULTS.md
src/agente_credito/: __init__.py  config.py  deps.py  graph.py  nodes.py  observability.py  persistence.py  state.py
src/agente_credito/extraction/: __init__.py  extractor.py
src/agente_credito/ingestion/: __init__.py  loader.py
src/agente_credito/ocr/: __init__.py  engine.py
src/agente_credito/security/: __init__.py  injection.py  pii.py
src/agente_credito/tools/: __init__.py  inconsistencias.py  indicadores.py
tests/: conftest.py  test_checkpoint_resume.py  test_demo_mode.py  test_evals.py  test_evals_paga.py  test_extracao_schema.py  test_graph_route.py  test_inconsistencias_limiar.py  test_injection_defense.py  test_node_indicadores.py  test_observability.py  test_pii_mask.py  test_stream.py  test_streamlit_app.py  test_tools_indicadores.py  test_tools_simulacao.py
