[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-credito-langgraph"
version = "0.1.0"
description = "Agente de apoio a analise de credito PF orquestrado com LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []  # versoes pinadas em requirements.txt

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["agente_credito.tools"]

[tool.coverage.report]
show_missing = true
